infrastructure/kubernetes/manifests/renderred/environments-staging/kubearmor/MutatingWebhookConfiguration/kubearmor-controller-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/managed-by: Helmraiser
    app.tanka.grafana.com: kubearmor
  name: kubearmor-controller-mutating-webhook-configuration
  namespace: kubearmor
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLVENDQWhHZ0F3SUJBZ0lRVUNsTzV1UVBWdTBpODJuNzg1K2haREFOQmdrcWhraUc5dzBCQVFzRkFEQWYKTVIwd0d3WURWUVFERXhScmRXSmxZWEp0YjNJdFkyOXVkSEp2Ykd4bGNqQWVGdzB5TmpBM016QXlNek15TWpKYQpGdzB5T1RBM01qa3lNek15TWpKYU1COHhIVEFiQmdOVkJBTVRGR3QxWW1WaGNtMXZjaTFqYjI1MGNtOXNiR1Z5Ck1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBMXZ6MVhDek9xUzkzb1lORDEzNWkKUFc0a1FUcGlDRWZlcWc5NENtYlB4b3plSWpuZGd0YVQ1TmJWQVZLWkYvQWdrVHhZeTlPRk5hUWJQOEY1N2ppNApEcmtucW1ZZEZY [...]
      service:
        name: kubearmor-controller-webhook-service
        namespace: kubearmor
        path: /mutate-pods
    failurePolicy: Ignore
    name: annotation.kubearmor.com
    objectSelector:
      matchExpressions:
        - key: kubearmor-app
          operator: DoesNotExist
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
          - pods/binding
        scope: "*"
    sideEffects: NoneOnDryRun
